fix(styles): mobile version gaps in birthdate input

--- a/src/app/features/generator/components/birthday-input/birthday-input.component.scss
+++ b/src/app/features/generator/components/birthday-input/birthday-input.component.scss
@@ -1,10 +1,9 @@
 .inputs {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  gap: 1rem;
 
   @media screen and (width >= 640px) {
-    gap: 1rem;
     flex-direction: row;
   }
 }
